# Microverse-2026-Project

./: .gitignore  CONTRIBUTING.md  README.md  anchor_verified.jsonl  attack_0.jsonl  attack_0_check.jsonl  attack_1.jsonl  attack_1_check.jsonl  attack_1_full_report.txt  attack_2.jsonl  attack_2_check.jsonl  attack_3.jsonl  attack_3_check.jsonl  attack_4.jsonl  attack_4_check.jsonl  flagged_report.txt  ingestion_to_verification_report.txt  main_run.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
data/: README.md
data/combined/: 2node.jsonl  anchor_verified.jsonl  run01.jsonl  run_2node.jsonl
lanes/amzad_hardware/: README.md
lanes/hendricks_dt/: README.md
lanes/leiva_verification/: README.md  anchor.py  bandpass_smooth.py  calibrate_thresholds.py  combined_smoothing.py  diagnose_enf_glitch.py  diagnose_uj_violations.py  enf_profile.py  nlr_profile.py  test_combined_smoothing.py  test_verifier.py  verification.py  verify_file.py
lanes/leiva_verification/outputs/: for_dashboard.jsonl  for_scoreboard.jsonl
lanes/marchisano_attacks/: README.md  attack.py  pipeline_test  pipeline_test.py
lanes/marchisano_attacks/outputs/: attack_203.jsonl  attack_203_check.jsonl  attack_easy_1.jsonl  attack_easy_1_check.jsonl  attack_easy_2.jsonl  attack_easy_2_check.jsonl
lanes/mccray_dashboard/: PIPELINE_SETUP.txt  README.md
microverse_core/: __init__.py  blender_bridge.py  contracts.py  data_loaders.py  io_records.py  metrics.py  scene_builder.py
scripts/: build_starter_scene.py  run_microverse.py  smoke_test.py
tests/: test_contracts.py
(+49 files in other folders)
