[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "microverse-core"
version = "0.1.0"
description = "Integration layer for the Secure AI Data Center Microverse (AFRL Summer 2026)"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools]
packages = ["microverse_core"]
